--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,11 @@
-Server.port =9090
+spring.application.name=Sprigboot-RazorPay-PaymentGateway-Application
 
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/ecomm
 
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/SpringBootRestfullwithhibernate
-db.username=root
-db.password:root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-
-hp.dialect=org.hibernate.dialect.MySQL5Dialect
-
-hp.hbm2ddl=update
-hp.show_sql=true
-hp.packageToScan=com.BikkadIT.SpringBootCurdWithRestfullHibernet
-
+razorpay.key.id=rzp_test_ZpPcgVQvZq7mgb
+razorpay.secret.key=L9BKJx6WFqfDWvacpLNBsEsN
